--- a/Index.html
+++ b/Index.html
@@ -101,7 +101,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h3 class="anchored" data-anchor-id="work-samples">Work Samples</h3>
 <p><a href="https://github.com/jennaahart">Github</a></p>
 <p><a href="https://27597121-8f5c-47ba-9fe5-0094a738f3f7.filesusr.com/ugd/19fd2d_a713f140e5a94dd396ab7d048c7f0b59.pdf">Resume</a></p>
-<p>Academic Work</p>
+<p><a href="https://jennaahart.github.io/ahartwebsite/AcademicWork.html">Academic Work</a></p>
 <p>Journalism Work</p>
 <p><img src="IMG_0036.PNG" class="img-fluid" width="306"></p>
 <div class="cell">
